# Mangoleaf

./: .env.example  .gitattributes  .gitignore  Home.py  LICENSE  README.md  create_schema.py  pyproject.toml  requirements.txt  reset_database.py  reset_dynamic_tables.sql  schema.sql  update_database.py
.github/workflows/: reset_database.yml  update_recommendations.yml
.streamlit/: config.toml  secrets.toml.example
mangoleaf/: __init__.py  authentication.py  connection.py  frontend.py  query.py  recommend.py
notebooks/: 0_books_cleaning.ipynb  1_books_popularity-recommender.ipynb  1_manga_recommenders.ipynb  2_books_item-based-recommender.ipynb  3_books_user-based-recommender.ipynb
pages/: 2_📖Books.py  3_🇯🇵Manga.py  4_✉️Contact.py  4_🤓Profile.py  5_🔍Book Explorer.py  5_🔭Manga Explorer.py  6_🔭Manga Explorer.py  6_🤓Profile.py  7_✉️Contact.py
style/: style.css
