[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mangoleaf"
version = "0.0.1"
description = "Mango Leaf is a Python package providing the backend for the web application of the same name."
authors = [
  { name = "Max Yurchak" },
  { name = "S\u00f6ren Zapp" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["mangoleaf"]
force_sort_within_sections = true
